<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding">
        <TextView
                android:id="@+id/eight_card_view_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:textColor="#000"
                android:text="@string/eight_first_activity_date"/>

        <TextView
                android:id="@+id/eight_card_view_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="#000"
                android:text="@string/eight_first_activity_currency"/>

        <TextView
                android:id="@+id/eight_card_view_buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="#000"
                android:text="@string/eight_first_activity_buy"/>

        <TextView
                android:id="@+id/eight_card_view_sell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="#000"
                android:text="@string/eight_first_activity_sell"/>

        <TextView
                android:id="@+id/eight_card_view_nbu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="#000"
                android:text="@string/eight_first_activity_nbu"/>

    </LinearLayout>

</android.support.v7.widget.CardView>