<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:custom="http://schemas.android.com/apk/res/com.savosh.exx"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <com.savosh.exx.component.FlexibleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            custom:width_relative_parent="0.333"
            custom:height_relative_parent="0.25"
            android:text="@string/three_second_activity_btn_left"/>


    <com.savosh.exx.component.FlexibleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            custom:width_relative_parent="0.333"
            custom:height_relative_parent="0.25"
            android:text="@string/three_second_activity_btn_right"/>


    <com.savosh.exx.component.FlexibleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            custom:width_relative_parent="0.5"
            custom:height_relative_parent="0.25"
            android:text="@string/three_second_activity_btn_bottom"/>



    <Button android:layout_width="@dimen/three_second_activity_btn_center"
            android:layout_height="@dimen/three_second_activity_btn_center"
            android:layout_centerInParent="true"
            android:text="@string/three_second_activity_btn_center"/>

</RelativeLayout>