<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
            android:id="@+id/eight_second_activity_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:gravity="center"
            android:textColor="#000"
            android:text="01.05.2015"
            android:background="@color/eight_first_activity_header"/>

    <android.support.v7.widget.CardView
            android:id="@+id/eight_first_activity_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/eight_second_activity_date"
            card_view:cardBackgroundColor="@color/eight_first_activity_header">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_padding"
                >

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:textColor="#000"
                    android:text="@string/eight_first_activity_currency"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:textColor="#000"
                    android:text="@string/eight_first_activity_buy"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:textColor="#000"
                    android:text="@string/eight_first_activity_sell"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:textColor="#000"
                    android:text="@string/eight_first_activity_nbu"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>



    <ListView
            android:id="@+id/eight_second_activity_list"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/eight_first_activity_header">
    </ListView>
</RelativeLayout>